<resources>
    <string name="app_name">Yew App</string>
    <string name="ok">OK</string>
    <string name="general_channel_name">Yew App General Channel</string>
    <string name="channel_description">Yew App notification channel for the purpose of showing Notifications.</string>
    <string name="general_notification_channel_id">base_general_notification_channel</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="gallery_permission_title">Gallery Permission</string>
    <string name="gallery_permission_description">Access to gallery has been prohibited.
        \n\nTo enable click \'APP SETTINGS\' below and activate \'Storage\' under the permissions menu.</string>
    <string name="camera_permission_description">Access to camera has been prohibited.
        \n\nTo enable click \'APP SETTINGS\' below and activate \'Camera\' under the permissions menu.</string>
    <string name="contact_permission_description">Access to Contact has been prohibited.
        \n\nTo enable click \'APP SETTINGS\' below and activate \'Contacts\' under the permissions menu.</string>
    <string name="location_permission_description">Access to Location has been prohibited.
        \n\nTo enable click \'APP SETTINGS\' below and activate \'Storage\' under the permissions menu.</string>
    <string name="record_audio_permission_description">Record Audio Permission has been prohibited.
        \n\nTo enable click \'APP SETTINGS\' below and activate \'Microphone\' under the permissions menu.</string>
    <string name="app_settings">App Settings</string>
    <string name="not_now">Not Now</string>
    <string name="skip">Skip</string>
    <string name="onboarding_title_1">Discover new adventures, achieve new goals, experience it with the world.</string>
    <string name="onboarding_sub_title_1">Push yourself and those you know and share your adventures on YEW.</string>
    <string name="onboarding_title_2">Join an existing challenge or create your own. Invite friends and make new ones.</string>
    <string name="onboarding_sub_title_2">Watch the leaderboard and find out who’s up for  the challenge. Yew!</string>
    <string name="onboarding_title_3">Rack up points! Earn them with every hike, run or bike activity you track.</string>
    <string name="onboarding_sub_title_3">Use points to enter sponsored giveaways and a chance to win a prize.</string>
    <string name="sign_in_with_facebook">Continue with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="login">Login</string>
    <string name="joined">Joined</string>
    <string name="already_a_member">Already a member</string>
    <string name="log_in_sign_up">Log In / Sign Up</string>
    <string name="enter_email_password"><![CDATA[Enter Email & Password]]></string>
    <string name="please_enter_your_registered_email_id_and_password">Please enter your registered Email ID and Password.</string>
    <string name="enter_email_username">Enter Email/ Username*</string>
    <string name="password">Password*</string>
    <string name="forgot_your_password_click_here">Forgot Your Password? Click Here</string>
    <string name="sig_up">Sign Up</string>
    <string name="enter_email">Enter Email*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="terms_and_conditions"><![CDATA[By signing up you are agreeing to our Terms of Service & Privacy Policy.]]></string>
    <string name="sign_up_instruction">Please enter your Email ID and Choose a Password for your profile</string>
    <string name="email_verification">Email Verification</string>
    <string name="verification_code_sent_on_email">An OTP has been shared on your provided email id %1s</string>
    <string name="verification_code_sent_on_mobile">An OTP has been shared on your provided mobile number. %1s</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="invalid_code">Entered code is not valid please try again or click on Resend Code button below.</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="timer_format"><u>%02d:%02d</u></string>
    <string name="congratulations">Congratulations!</string>
    <string name="sign_success_info">Account has been created successfully with your email id %s</string>
    <string name="add_details">Add Details</string>
    <string name="enter_registered_email">Please enter the Email ID you used to register with Yew! App.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="step_1_3">Step ⅓</string>
    <string name="verify_email">Verify Email</string>
    <string name="passwords_must_contain_at_least_8_character">Passwords must contain at least 8 characters a symbol(@,#,$ etc).</string>
    <string name="create_password">Create Password</string>
    <string name="step_label">Step %d/3</string>
    <string name="password_created_successfully">You have successfully created your new password. You can now login with your new password.</string>
    <string name="you_don_t_have_any_followers_or_following">You don\'t have any followers or following. Please follow someone or post your feed.</string>
    <string name="you_don_t_have_any_reffered_friends">You don\'t have any referred friend. Please refer someone.</string>
    <string name="add_feed">Add Feed</string>
    <string name="send_report">Send Report</string>
    <string name="all_feeds">All feeds</string>
    <string name="my_feeds">My Feeds</string>
    <string name="go_back">Go Back</string>
    <string name="save_as_draft"><u>Save As Draft</u></string>
    <string name="save_as_draft_without_line">Save As Draft</string>
    <string name="continue_label">Continue</string>
    <string name="title">Title*</string>
    <string name="write_comment">Write Comment</string>
    <string name="email_id">Enter Email Id*</string>
    <string name="date_birth">Date Of Birth*</string>
    <string name="enteryour">Enter your</string>
    <string name="reason">Reason*</string>
    <string name="comments">Comments*</string>
    <string name="comment">Comments</string>
    <string name="what_s_in_your_mind">What\'s in your mind?</string>
    <string name="publish">Publish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abraham_tesla">Abraham Tesla</string>
    <string name="subtitle_follower_toolbar">Oakwill USA • Male</string>
    <string name="my_followers">My Followers</string>
    <string name="my_following">My Following</string>
    <string name="created_by_me">Created</string>
    <string name="active">Active</string>
    <string name="past_challenge">Past</string>
    <string name="search_hint">Search Member…</string>
    <string name="challenges">Challenges</string>
    <string name="me">Me</string>
    <string name="profile">Profile</string>
    <string name="activities">Activities</string>
    <string name="my_points">My Points</string>
    <string name="associate">Associate</string>
    <string name="challenge">Challenge</string>
    <string name="search">Search…</string>
    <string name="draft">DRAFT</string>
    <string name="virtual_new_york_city_marathon">Virtual New York City Marathon</string>
    <string name="starts_in_20_days">Starts in 20 Days</string>
    <string name="subtitle_text_challenge"><![CDATA[Climb a total of 3,000 meters on your bike & earn 500 pnts.]]></string>
    <string name="profile_setting">Profile Setting</string>
    <string name="manage_notification">Manage Notification</string>
    <string name="manage_users">Manage Users</string>
    <string name="about_yew">About Yew!</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq_s">FAQ\'S</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="subscription">Subscription</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="manage_ads">Manage Ads</string>
    <string name="manage_feeds">Manage Feeds</string>
    <string name="contactus_note"><b>Important Note</b>: Fields marked as mandatory (*) cannot be sent blank.</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="message">Message*</string>
    <string name="upload_image">Upload Image</string>
    <string name="attachments">Attachments:</string>
    <string name="upload_report_image_note">Images should be of format .png, .jpg. Maximum size should not exceed 20mb.</string>
    <string name="upload_report_image_feedback">Images should be of format .png, .jpg or mp4.Size should not be more than 15mb.</string>
    <string name="image_can_be_png_jpg_or_webp_amp_should_not_exceed_5mb"><![CDATA[Image can be .png, .jpg or .webp & should not exceed 5mb]]></string>
    <string name="submit">Submit</string>
    <string name="associate_add">Add Members</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="upload_image_report">to upload screenshot or file</string>
    <string name="edit">Edit</string>
    <string name="biking">Biking</string>
    <string name="running">Running</string>
    <string name="hiking">Hiking</string>
    <string name="about">About Me</string>
    <string name="calories">Calories</string>
    <string name="calorie">Calorie</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="elevation">Elev. Gain</string>
    <string name="compare_statistics">Compare Statistics</string>
    <string name="compare_stats_privacy">Compare Stats Privacy</string>
    <string name="compare_stats_description">If enabled other users will be able to see your points and stats when they use Compare Stats feature</string>
    <string name="who_can_see_your_stats">Who can see your stats?</string>
    <string name="allow_to_see_points">Allow users to see points</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="hide_phone_number">Hide Phone Number</string>
    <string name="hide_email_id">Hide Email ID</string>
    <string name="points">Points</string>
    <string name="error_no_internet_connection">Failed to connect. Make sure you have an active internet connection</string>
    <string name="server_maintenance">Something went wrong</string>
    <string name="bad_request">Unauthorized access</string>
    <string name="success">Success</string>
    <string name="empty_email_error">Email/Username cannot be empty</string>
    <string name="empty_fullname_error">Name cannot be empty</string>
    <string name="empty_comment_error">Comment cannot be empty</string>
    <string name="empty_reason_error">Reason cannot be empty</string>
    <string name="empty_reply_error">Reply cannot be empty</string>
    <string name="invalid_email_error">Enter a valid email</string>
    <string name="email_updated_success_message">Your email is updated successfully.Please login with updated email id.</string>
    <string name="mobile_updated_success_message">Your mobile number is updated successfully.</string>
    <string name="invalid_phoneNumber_error">Enter a valid Phone Number</string>
    <string name="empty_phoneNumber_error">Phone Number cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="empty_message_error">Message cannot be empty</string>
    <string name="favorite">Favorite</string>
    <string name="upcoming">Upcoming</string>
    <string name="chat_with_parent">Chat With Parent</string>
    <string name="share_feedback">Share Feedback</string>
    <string name="manage_short_video">Manage Short Video</string>
</resources>